--- a/builder/platform-uploads/etc/nginx/nginx.conf
+++ b/builder/platform-uploads/etc/nginx/nginx.conf
@@ -41,14 +41,14 @@ http {
     ##
     # Logging Settings
     ##
-    access_log                      /var/log/nginx/access.log main;
-    error_log                       /var/log/nginx/error.log warn;
     log_format main  '$remote_addr - $remote_user [$time_local] "$request" '
                           '$status $body_bytes_sent "$http_referer" '
                           '"$http_user_agent" "$http_x_forwarded_for"';
     log_format healthd '$msec"$uri"'
                            '$status"$request_time"$upstream_response_time"'
                            '$http_x_forwarded_for';
+    access_log                      /var/log/nginx/access.log main;
+    error_log                       /var/log/nginx/error.log warn;
     ##
     # Gzip Settings
     ##
@@ -74,6 +74,9 @@ http {
     fastcgi_cache_valid 5m;
     fastcgi_ignore_headers Cache-Control Expires Set-Cookie;
 
+    
+
     include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
 
