--- a/builder/platform-uploads/etc/nginx/nginx.conf
+++ b/builder/platform-uploads/etc/nginx/nginx.conf
@@ -47,6 +47,12 @@ http {
     log_format healthd '$msec"$uri"'
                            '$status"$request_time"$upstream_response_time"'
                            '$http_x_forwarded_for';
+
+    log_format upstreamlog '[$time_local] host=$host proxy_add_x_forwarded_for=$proxy_add_x_forwarded_for '
+                          'http_upgrade=$http_upgrade remote_addr=$remote_addr remote_user=$remote_user '
+                          'server_name=$server_name upstream_addr=$upstream_addr request=$request '
+                          'upstream_response_time=$upstream_response_time msec=$msec request_time=$request_time';
+
     access_log                      /var/log/nginx/access.log main;
     error_log                       /var/log/nginx/error.log warn;
     ##
@@ -73,8 +79,6 @@ http {
     fastcgi_cache_use_stale error timeout invalid_header updating http_500;
     fastcgi_cache_valid 5m;
     fastcgi_ignore_headers Cache-Control Expires Set-Cookie;
-
-    
 
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
