--- a/builder/platform-uploads/etc/nginx/sites-conf.d/30-proxy.conf
+++ b/builder/platform-uploads/etc/nginx/sites-conf.d/30-proxy.conf
@@ -7,5 +7,6 @@ location /socket.io {
     proxy_set_header    X-Real-IP         $remote_addr;
     proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
     proxy_set_header    X-Forwarded-Proto $scheme;
-    # proxy_redirect      http://127.0.0.1:6001 https://domain.name;
+
+    access_log /var/log/nginx/access.log upstreamlog;
 }
