Added supervisor/laravel echo server failure protection

--- a/builder/platform-uploads/etc/supervisor/conf.d/laravel-echo-server.conf
+++ b/builder/platform-uploads/etc/supervisor/conf.d/laravel-echo-server.conf
@@ -3,6 +3,8 @@ directory=/etc
 command=/usr/bin/laravel-echo-server start
 autostart=true
 autorestart=true
+startsecs=0
+startretries=0
 user=root
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/laravel-echo-server.log
