--- a/builder/platform-uploads/etc/php/7.1/fpm/pool.d/www.conf
+++ b/builder/platform-uploads/etc/php/7.1/fpm/pool.d/www.conf
@@ -1,7 +1,7 @@
 [www]
 user = www-data
 group = www-data
-listen = /run/php/php7.1-fpm.sock
+listen = /var/run/php/php7.1-fpm.sock
 listen.owner = www-data
 listen.group = www-data
 pm = dynamic
